--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+<style type="text/css">
 body {
     margin: 100px;
     font-family: "Arial", Monospace;
@@ -52,3 +53,4 @@ section ul {
 section ol {
     list-style-type: circle;
 }
+</style>
