--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     margin: 100px;
     font-family: "Arial", Monospace;
     font-size: 14px;
-    background-image: url("https://scontent.fmnl4-3.fna.fbcdn.net/v/t31.0-8/28947074_10211815823052819_8765283015570527227_o.jpg?_nc_eui2=v1%3AAeGbSCbkwfvaGSJT48weoEDmK2YXZm8320EGULkIrq6m9Wm2-dDgy5eim0Yu_eEzDupjluY4nSvb1-B408lY6nQk6c8rV1LHTwTnj2bVAP_x6Q&oh=5c267b32736cd73cd2b992c7b503f26d&oe=5B3C1343");
+    background-image: url("https://ichemepresident.files.wordpress.com/2014/08/gas-rig.jpg");
     height: 100%;
     background-position: center;
     background-repeat: no-repeat;
